[package]
name = "buildpacks-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = "0.15.4"
flate2 = "1.0.26"
libcnb = "0.12.0"
libherokubuildpack = { version = "0.12.0", default-features = false, features = ["log"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
rust-releases = { version = "0.26.0", default-features = false, features = ["rust-releases-rust-dist"] }
tar = "0.4.38"
tempfile = "3.5.0"
thiserror = "1.0.40"
